Fixed question header row gap and added temporary fix for error bottom spacing

--- a/packages/survey-core/src/default-theme/blocks/sd-question.scss
+++ b/packages/survey-core/src/default-theme/blocks/sd-question.scss
@@ -53,6 +53,16 @@
   }
 }
 
+// TODO: remove this during tockens update
+.sd-question__erbox ~ .sd-question__header-and-content-container {
+  padding-top: var(--sjs2-spacing-x300);
+}
+.sd-root-modern--mobile {
+  .sd-question__erbox ~ .sd-question__header-and-content-container {
+    padding-top: var(--sd-base-vertical-padding);
+  }
+}
+// END TODO: remove this during tockens update
 
 // .sd-question--left {
 //   display: flex;
@@ -64,6 +74,8 @@
 // }
 
 .sd-question__header {
+  display: flex;
+  flex-direction: column;
   // padding-top: var(--sjs2-layout-component-question-header-padding-top, var(--sd-base-vertical-padding));
   // padding-bottom: var(--sjs2-layout-component-question-header-padding-bottom, calc(0.5 * var(--sd-base-vertical-padding)));
   // padding-left: var(--sjs2-layout-component-question-header-padding-left, calc(var(--sd-base-padding) + var(--sv-element-add-padding-left, 0px)));
@@ -186,9 +198,19 @@
 //   margin-top: calc(0.25 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x050));
 // }
 
+.sd-element--with-frame>div>.sd-element__erbox {
+    position: sticky;
+    left: 0;
+}
+
 .sd-element--with-frame>div>.sd-element__erbox--above-element {
   // margin-bottom: var(--sd-base-padding);
   border-radius: var(--sjs2-radius-component-panel) var(--sjs2-radius-component-panel) 0 0;
+}
+
+.sd-element--with-frame>div>.sd-question__erbox--below-question {
+  // margin-top: auto;
+  border-radius: 0 0 var(--sjs2-radius-component-panel) var(--sjs2-radius-component-panel);
 }
 
 // .sd-question--left>.sd-element__erbox--above-element {
@@ -198,11 +220,6 @@
 // .sd-element--with-frame.sd-question--left>.sd-element__erbox--above-element {
 //   margin-bottom: calc(1 * var(--sd-base-vertical-padding));
 // }
-
-.sd-element--with-frame>div>.sd-question__erbox--below-question {
-  // margin-top: auto;
-  border-radius: 0 0 var(--sjs2-radius-component-panel) var(--sjs2-radius-component-panel);
-}
 
 // .sd-element--with-frame.sd-question--title-top>.sd-question__erbox--above-question {
 //   margin-bottom: calc(0.5 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x100));
@@ -221,34 +238,34 @@
 //   margin-top: calc(0.25 * var(--sd-base-vertical-padding) - var(--sjs2-size-x050));
 // }
 
-.sd-element--with-frame {
-  // &.sd-question--title-top {
-  //   padding-top: var(--sd-base-vertical-padding);
-  // }
+// .sd-element--with-frame {
+//   // &.sd-question--title-top {
+//   //   padding-top: var(--sd-base-vertical-padding);
+//   // }
 
-  // &.sd-question--error-top {
-  //   padding-top: 0;
-  // }
+//   // &.sd-question--error-top {
+//   //   padding-top: 0;
+//   // }
 
-  // &.sd-question--error-bottom {
-  //   padding-bottom: 0;
-  //   display: flex;
-  //   flex-direction: column;
+//   // &.sd-question--error-bottom {
+//   //   padding-bottom: 0;
+//   //   display: flex;
+//   //   flex-direction: column;
 
-  //   // &>.sd-question__content {
-  //   //   margin-bottom: var(--sd-base-padding);
-  //   // }
-  // }
+//   //   // &>.sd-question__content {
+//   //   //   margin-bottom: var(--sd-base-padding);
+//   //   // }
+//   // }
 
-  &>.sd-element__erbox {
-    // margin-left: calc(-1 * var(--sd-base-padding));
-    // margin-right: calc(-1 * var(--sd-base-padding));
-    // width: calc(100% + 2 * var(--sd-base-padding));
-    position: sticky;
-    left: 0;
-    // left: calc(-1 * var(--sd-base-padding));
-  }
-}
+//   &>.sd-element__erbox {
+//     // margin-left: calc(-1 * var(--sd-base-padding));
+//     // margin-right: calc(-1 * var(--sd-base-padding));
+//     // width: calc(100% + 2 * var(--sd-base-padding));
+//     position: sticky;
+//     left: 0;
+//     // left: calc(-1 * var(--sd-base-padding));
+//   }
+// }
 
 .sd-scrollable .sd-question__content {
   overflow-x: auto;
